Add initial implementation of Fmod for scalars and vectors
None of this has been tested and there are definitely bugs. However, this is at least a first rough draft. Additional changes required for Fmod:
- Add CountLeadingZeros() SIMD operations
- Add WidenAndSplit/NarrowAndCombine SIMD operations for cases where e.g. f32x4 is supported but f64x4 is not
- Add GetMask() SIMD operation
- Add mechanisms to access wider/narrower/same-sized SIMD element types
- Add a MaskedResult utility class which allows masking off of individual SIMD lanes and early returns if all lanes are filled
- Add transcendental placeholder functions (not required but I already added Transcendentals.ixx which modified the vcxproj file)

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -35,6 +35,9 @@
     <ClCompile Include="Core\Types.ixx" />
     <ClCompile Include="Core\Utilities.ixx" />
     <ClCompile Include="Math\CommonMath.ixx" />
+    <ClCompile Include="Math\Fmod.ixx" />
+    <ClCompile Include="Math\MaskedResult.ixx" />
+    <ClCompile Include="Math\Transcendentals.ixx" />
     <ClCompile Include="Math\Simd\Implementations\Avx2.ixx" />
     <ClCompile Include="Math\Simd\Implementations\Avx2\F32x4.ixx" />
     <ClCompile Include="Math\Simd\Implementations\Avx2\F32x8.ixx" />
