Add a few more unit tests and clean up module names

--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -160,6 +160,8 @@
   <ItemGroup>
     <ClCompile Include="ConsoleCommand.cpp" />
     <ClCompile Include="ConsoleCommand.ixx" />
+    <ClCompile Include="Core\Coerce.cpp" />
+    <ClCompile Include="Core\NullTerminatedString.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Test.ixx" />
