--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Core\Coerce.cpp" />
     <ClCompile Include="Core\NullTerminatedString.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="String\String.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="Test.ixx" />
     <ClCompile Include="Utilities\Alignment.cpp" />
