--- a/NativeTests/NativeTests.vcxproj.filters
+++ b/NativeTests/NativeTests.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="Core\NullTerminatedString.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="String\String.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
