Add some SIMD unit tests and fix bugs
The SIMD unit tests run on all supported SIMD types and validate that SIMD operation results are identical to scalar operations being executed individually on all lanes. Different test values are spread across lanes to ensure that cross-lane interference does not occur. Additionally, the unit test framework has been expanded to include a new macro, TEST_METHOD_CONSTEXPR. This macro is like TEST_METHOD but also calls the test method in a constexpr context. All SIMD tests use TEST_METHOD_CONSTEXPR.

--- a/NativeTests/NativeTests.vcxproj
+++ b/NativeTests/NativeTests.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Containers\BoundedArray.cpp" />
     <ClCompile Include="Containers\FixedArray.cpp" />
     <ClCompile Include="Containers\UnboundedArray.cpp" />
+    <ClCompile Include="Math\Simd.cpp" />
     <ClCompile Include="TestUtilities\ObjectWithConstructorArguments.ixx" />
     <ClCompile Include="TestUtilities\ResizableArrayBaseTests.ixx" />
     <ClCompile Include="Containers\Span.cpp" />
@@ -178,6 +179,7 @@
     <ClCompile Include="Utilities\BitOperations.cpp" />
     <ClCompile Include="Utilities\Bounds.cpp" />
     <ClCompile Include="Utilities\Copy.cpp" />
+    <ClCompile Include="TestUtilities\SimdTest.ixx" />
     <ClCompile Include="Utilities\Unroll.cpp" />
   </ItemGroup>
   <ItemGroup>
