Add unit tests for math functions (SinTwoPi, CosTwoPi, Exp2, etc.)
These tests aren't very rigorous, they mostly just test certain key values (e.g. SinTwoPi(0.25) == 1). This is because more rigorous floating point accuracy tuning and testing is performed in the MathPrecisionTests project.

--- a/NativeTests/NativeTests.vcxproj.filters
+++ b/NativeTests/NativeTests.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClCompile Include="Math\Simd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Math\MathFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
