Workaround MSVC bug where s32 -> f32 casts are sometimes dropped in during constexpr evaluation
Emulated conversions and casting code has also been simplified to use std::array and std::bit_cast.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="Core\Concepts.ixx" />
     <ClCompile Include="Core\Core.ixx" />
     <ClCompile Include="Core\FloatTraits.ixx" />
+    <ClCompile Include="Core\ConstevalSafeCast.ixx" />
     <ClCompile Include="Foundation.ixx" />
     <ClCompile Include="Core\NullTerminatedString.ixx" />
     <ClCompile Include="Core\Types.ixx" />
