--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -171,6 +171,12 @@
     <ClCompile Include="Core\ConstevalSafeCast.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Functional\Callable.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Functional\Functional.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Assert.Macros.h">
