--- a/NativeTests/NativeTests.vcxproj.filters
+++ b/NativeTests/NativeTests.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="Math\MathFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Functional\Callable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
